kubernetes/envoy-filter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lab-test
  namespace: lab-test
spec:
  workloadSelector:
    labels:
      app: ping-http
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          portNumber: 8888 # 15090 sidecar port
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
              subFilter:
                name: "envoy.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.grpc_http1_reverse_bridge
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.http.grpc_http1_reverse_bridge.v2alpha1.FilterConfig
            content_type: application/grpc+proto
            withhold_grpc_frames: true
