kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lab-test
  namespace: lab-test
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lab-test
  namespace: lab-test
spec:
  hosts:
    - "*"
  gateways:
    - lab-test
  http:
    - match:
        - uri:
            prefix: /sp.rpc.PingService
      route:
        - destination:
            host: ping-http # ping-grpc (change by ping-http to check envoy filter reverse bridge)
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ping-http
